--- a/foundations/05-descendant-combinator/index.html
+++ b/foundations/05-descendant-combinator/index.html
@@ -17,5 +17,6 @@
       <p class="text">This should be styled.</p>
       <p class="text">This should be styled.</p>
     </div>
+    <div><img src="desired-outcome.png" style="max-width: 600px;"></div>
   </body>
 </html>
