--- a/foundations/06-cascade-fix/index.html
+++ b/foundations/06-cascade-fix/index.html
@@ -18,5 +18,6 @@
     <div class="text">I'm a div with green text and a child div!
       <div class="text child">I'm a smaller child div with red text.</div>
     </div>
+    <div><img src="desired-outcome.png" style="max-width: 600px;"></div>
   </body>
 </html>
