Finish margin-and-padding-01

--- a/margin-and-padding/01-margin-and-padding-1/index.html
+++ b/margin-and-padding/01-margin-and-padding-1/index.html
@@ -17,5 +17,7 @@
     <div class="three">
       DIV THREE
     </div>
+
+    <div style="margin-top: 50px; float: left;"><img src="desired-outcome.png"></div>
   </body>
 </html>
