--- a/margin-and-padding/02-margin-and-padding-2/index.html
+++ b/margin-and-padding/02-margin-and-padding-2/index.html
@@ -13,5 +13,7 @@
       <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
       <div class="button-container">and a <button>BIG BUTTON</button></div>
     </div>
+
+    <div style="margin-top: 50px; margin-left: -20px;"><img src="desired-outcome.png"></div>
   </body>
 </html>
